--- a/server/package.json
+++ b/server/package.json
@@ -2,7 +2,6 @@
   "name": "second-brain-app",
   "version": "1.0.0",
   "main": "app.js",
-  "module": "commonjs",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -11,6 +10,7 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "dotenv": "^16.4.7",
     "express": "^4.21.2",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.9.5",
